# AssettoCorsaMWPhysics

./: AssettoCorsaMWPhysics_gcp.toml  CMakeLists.txt  MWCarTuning.h  README.md  inputs.h  main.cpp  util.h
CarDataDump/: 2008_megane_rs.conf  a3dr_lambo_diablo_vt.conf  a3dr_porsche_993_c2.conf  alfa_romeo_giulietta_qv_le.conf  austin_mini_cooper_s.conf  bg_mercedes_clk55_amg.conf  bm_mazda_rx8_types.conf  citroen_c15_d.conf  clio_220_edc_2016.conf  copy_orig.sh  dodge_char_srt8.conf  dthwsh_nissan_240sx.conf  ferrari_360_challenge_stradale.conf  ferrari_458_s3.conf  ferrari_f40_s3.conf  ford_f350_flatbed.conf  golf_mk5_tuned.conf  gue_lexus_is_300_jdm.conf  j8_er34_25gt_turbo.conf  ks_abarth_595ss_s2.conf  ks_alfa_romeo_155_v6.conf  ks_audi_a1s1.conf  ks_audi_r8_lms.conf  ks_audi_tt_cup.conf  ks_corvette_c7_stingray.conf  ks_ferrari_312_67.conf  ks_ferrari_sf70h.conf  ks_ford_mustang_2015.conf  ks_maserati_250f_6cyl.conf  ks_mazda_rx7_spirit_r.conf  ks_mclaren_650_gt3.conf  ks_nissan_370z.conf  ks_nissan_gtr.conf  ks_nissan_skyline_r34.conf  ks_porsche_917_k.conf  ks_porsche_991_carrera_s.conf  ks_porsche_991_turbo_s.conf  ks_porsche_cayman_gt4_clubsport.conf  ks_porsche_macan.conf  ks_toyota_supra_mkiv.conf  (+18 more)
CarDataDump/orig_cb_full/: 240sx.conf  300c.conf  350z.conf  997gt3rs.conf  997tt.conf  angie_casino.conf  bmwm3gtre46.conf  bmwm3gtre46_crosschase.conf  brera.conf  camaro.conf  camaron.conf  carreragt.conf  caymans.conf  ccx.conf  challenger71.conf  clio.conf  (+83 more)
MostWantedAI/: gcp_bmwm3gtre46.toml  global.toml
decomp/: HelperTypes.h
include/: chloemwphysics.h
(+377 files in other folders)
